WIP: maven now runs tests with surefire plugin