@@ -145,9 +145,21 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.12.4</version>
+                    <version>2.22.0</version>
                     <configuration>
-                        <argLine>-XX:+UseParallelGC</argLine>
+                        <argLine>
+                            --illegal-access=permit -XX:+UseParallelGC
+                        </argLine>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>2.22.2</version>
+                    <configuration>
+                        <argLine>
+                            --illegal-access=permit -XX:+UseParallelGC
+                        </argLine>
                     </configuration>
                 </plugin>
             </plugins>
